# Myendtris

./: .gitignore  Pipfile  README.md  panda.py  readme.txt  waldo.py
Calibration/: main.py
demo/: README.md  launcher-Meyendtris.bat  launcher-Meyendtris.sh  pyproject.toml
demo/docs/: Paradigm.md  concentration-paradigm.docx  error-paradigm.docx
demo/meyendtris/: __init__.py  client.py  launcher.py  server.py
demo/meyendtris/framework/: base_classes.py  basicstimuli.py  latentmodule.py  tickmodule.py
demo/meyendtris/framework/eventmarkers/: eventmarkers.py
demo/meyendtris/framework/navigation/: navigation.py  pyrecast.py
demo/meyendtris/framework/speech_io/: speech.py
demo/meyendtris/framework/ui_elements/: AudioPresenter.py  BroadcastPresenter.py  EventWatcher.py  ImagePresenter.py  MessagePresenter.py  RandomPresenter.py  ScrollPresenter.py  TextPresenter.py
demo/meyendtris/modules/: classification.py  game.py
demo/meyendtris/modules/Alpha/: Alpha-02-001-calibration.py  calibration.py
demo/meyendtris/modules/concentration/: calibration.py  hello_panda.py
demo/meyendtris/modules/error/: calibration.py
demo/meyendtris/modules/relaxation/: Alpha-01-001-bar.py  calibration.py
demo/src/: launcher.py
demo/src/modules/Alpha/: Alpha-01-001-bar.py
demo/src/modules/Meyendtris/: Meyendtris.py
demo/src/studies/: meyendtrisdisplaysettings.prc
demo/src_old/modules/Alpha/: Alpha-02-001-calibration.py
demo/tests/: example.py  test_calibration.py  test_framework.py
misc/Tobii230/: README.txt  (+1 more)
scripts/: onlineMeyendtris.m  trainModel.m
(+9 files in other folders)
