[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "meyendtris"
authors = [
{name = "Binay Kumar Pradhan", email = "pradhan.binay@b-tu.de"},
]
readme = "README.md"
description = "Meyendtris, a variant of Tetris influenced by passive BCI with 2 mental states and movements controlled by eye tracking."
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.7"
dynamic = ["version"]